--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: @MODULE_NAME@ CI
+name: cbMeilisearch CI
 
 # Only on Development we build snapshots
 on:
@@ -8,7 +8,7 @@ on:
       - master
 
 env:
-  MODULE_ID: @MODULE_SLUG@
+  MODULE_ID: cbmeilisearch
 
 jobs:
   #############################################
