--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,3 @@
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=mysql
-DB_CLASS=com.mysql.cj.jdbc.Driver
-DB_BUNDLEVERSION=8.0.19
-DB_BUNDLENAME=com.mysql.cj
+MEILISEARCH_HOST=http://127.0.0.1
+MEILISEARCH_PORT=7700
+MEILISEARCH_MASTER_KEY=MASTER_KEY_HERE
