--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,14 +40,9 @@ jobs:
          printf "MEILISEARCH_PORT=7700\n" >> .env
          printf "MEILISEARCH_MASTER_KEY=$MASTER_KEY\n" >> .env
 
-
       - name: Setup Meilisearch
         run: |
-          docker run -it --rm \
-          -p 7700:7700 \
-          -e MEILI_MASTER_KEY='$MASTER_KEY'\
-          -v $(pwd)/meili_data:/meili_data \
-          getmeili/meilisearch
+          docker run -it --rm  -p 7700:7700 -e MEILI_MASTER_KEY='$MASTER_KEY' -v $(pwd)/meili_data:/meili_data getmeili/meilisearch
           meilisearch --env="development"
 
       - name: Cache CommandBox Dependencies
@@ -107,15 +102,15 @@ jobs:
             .engine/**/logs/*
             .engine/**/WEB-INF/cfusion/logs/*
 
-      - name: Slack Notifications
-        # Only on failures and NOT in pull requests
-        if: ${{ failure() && !startsWith( 'pull_request', github.event_name ) }}
-        uses: rtCamp/action-slack-notify@v2
-        env:
-          SLACK_CHANNEL: coding
-          SLACK_COLOR: ${{ job.status }} # or a specific color like 'green' or '#ff00ff'
-          SLACK_ICON_EMOJI: ":bell:"
-          SLACK_MESSAGE: '${{ github.repository }} tests failed :cry:'
-          SLACK_TITLE: ${{ github.repository }} Tests For ${{ matrix.cfengine }} failed
-          SLACK_USERNAME: CI
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
+      # - name: Slack Notifications
+      #   # Only on failures and NOT in pull requests
+      #   if: ${{ failure() && !startsWith( 'pull_request', github.event_name ) }}
+      #   uses: rtCamp/action-slack-notify@v2
+      #   env:
+      #     SLACK_CHANNEL: coding
+      #     SLACK_COLOR: ${{ job.status }} # or a specific color like 'green' or '#ff00ff'
+      #     SLACK_ICON_EMOJI: ":bell:"
+      #     SLACK_MESSAGE: '${{ github.repository }} tests failed :cry:'
+      #     SLACK_TITLE: ${{ github.repository }} Tests For ${{ matrix.cfengine }} failed
+      #     SLACK_USERNAME: CI
+      #     SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
