--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Setup Meilisearch
         run: |
-          docker run --detach --rm  -p 7700:7700 -e MEILI_MASTER_KEY="$MASTER_KEY" -v $(pwd)/meili_data:/meili_data getmeili/meilisearch:${{ matrix.cfengine }} meilisearch --env="development"
+          docker run --detach --rm  -p 7700:7700 -e MEILI_MASTER_KEY="$MASTER_KEY" -v $(pwd)/meili_data:/meili_data getmeili/meilisearch:${{ matrix.meilisearch }} meilisearch --env="development"
 
       - name: Cache CommandBox Dependencies
         uses: actions/cache@v1
