--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,4 @@
+# .env
 MEILISEARCH_HOST=http://127.0.0.1
 MEILISEARCH_PORT=7700
-MEILISEARCH_MASTER_KEY=MASTER_KEY_HERE
+MEILISEARCH_MASTER_KEY=mySecretKey
