👌 IMPROVE: Completely ignore dependency directories, not just directory contents

--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,11 @@ docs/
 .engine/**
 
 # Dependencies
-test-harness/coldbox/**
-test-harness/docbox/**
-test-harness/testbox/**
-test-harness/logs/**
-test-harness/modules/**
+test-harness/coldbox
+test-harness/docbox
+test-harness/testbox
+test-harness/logs
+test-harness/modules
 
 # modules
 modules/**
