👌 IMPROVE: Don't allow push to Forgebox from forked repos

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ jobs:
   #############################################
   build:
     name: Build & Publish
+    if: github.repository == 'coldbox-modules/cbmeilisearch'
     needs: tests
     runs-on: ubuntu-20.04
     steps:
