🤖 TEST: Add cfengine to experimental matrix

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,6 +23,7 @@ jobs:
         experimental: [ false ]
         include:
           - meilisearch: "v0.30.0rc0"
+            cfengine: "lucee@5"
             experimental: true
     steps:
       - name: Checkout Repository
