🤖 CI: Limit long-running jobs, prefer v1 testing for matrix
1. No need to run the CF engine matrix on every version. Instead, run every version on Lucee (the fastest, generally) and run the latest version on all CF engines.
2. Avoid unresponsive jobs from taking 360 minutes (the default) to cancel.
3. Pin TestBox to 4.5.0

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,16 +15,20 @@ jobs:
     name: Tests
     continue-on-error: ${{ matrix.experimental }}
     runs-on: ubuntu-20.04
+    timeout-minutes: 20
     strategy:
       fail-fast: false
       matrix:
         cfengine: [ "lucee@5", "adobe@2018", "adobe@2021" ]
-        meilisearch: [ "v0.28", "v0.29", "v0.30" ]
+        meilisearch: [ "v1.0.1" ]
         experimental: [ false ]
         include:
-          - meilisearch: "v1.0.1"
+          - meilisearch: "v0.30", 
             cfengine: "lucee@5"
-            experimental: true
+          - meilisearch: "v0.29", 
+            cfengine: "lucee@5"
+          - meilisearch: "v0.28", 
+            cfengine: "lucee@5"
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3.2.0
