🤖 TEST: Fix invalid matrix syntax

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,16 +25,16 @@ jobs:
         include:
           - meilisearch: "v1.1.0-rc.0"
             cfengine: "lucee@5"
-            expiremental: true
+            experimental: true
           - meilisearch: "v0.30"
             cfengine: "lucee@5"
-            expiremental: false
+            experimental: false
           - meilisearch: "v0.29"
             cfengine: "lucee@5"
-            expiremental: false
+            experimental: false
           - meilisearch: "v0.28"
             cfengine: "lucee@5"
-            expiremental: false
+            experimental: false
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3.2.0
